# rising-tide

./: .gitignore  README.md  devShell.nix  flake-modules.nix  flake.nix  lib.nix  project.nix  tapolo  taskfile.yml  test.yaml  test.yml
.github/workflows/: ci.yml  docs.yml
.minimal/: README.md  flake.nix
checks/: default.nix
collisiond/: .gitignore
docs/rising-tide/: .gitignore  docusaurus.config.ts  package-lock.json  package.json
integration-tests/flake-utils/: README.md
integration-tests/flake-utils/base-devshell/: .envrc  .gitignore  README.md  flake.nix  project.nix  test.bats
integration-tests/flake-utils/cpp/: .gitignore  CMakeLists.txt  env.sh  flake.nix  package.nix  project.nix  test.bats
integration-tests/flake-utils/cpp-monorepo/: .gitignore  flake.nix  project.nix  test.bats
integration-tests/flake-utils/cpp-monorepo/package-1/: .gitignore  CMakeLists.txt  package.nix  project.nix
integration-tests/flake-utils/cpp-monorepo/package-1/src/: hello.cpp
integration-tests/flake-utils/cpp-monorepo/package-1/tests/: CMakeLists.txt
integration-tests/flake-utils/cpp-monorepo/package-2/tests/: CMakeLists.txt  dummy_test.cpp  dummy_test2.cpp
integration-tests/flake-utils/go-task/: .gitignore  flake.nix  project.nix  test.bats
integration-tests/flake-utils/go-task-subproject-task-propagation/: .gitignore  flake.nix  project.nix  test.bats
integration-tests/flake-utils/mavlink/: .gitignore  .lefthook.yml  flake.nix  foo.py  project.nix  taskfile.yml  test.bats
integration-tests/flake-utils/protobuf/: .gitignore  flake.nix  project.nix  test.bats
integration-tests/flake-utils/protobuf/example-grpc-cpp/: CMakeLists.txt  package.nix  project.nix
integration-tests/flake-utils/protobuf/example-grpc-cpp/src/: CMakeLists.txt  hello-server.cpp
integration-tests/flake-utils/protobuf/python-package-1/: .envrc  .gitignore  package.nix  project.nix  pyproject.toml
integration-tests/flake-utils/protobuf/python-package-1/src/python_package_1/: __init__.py
integration-tests/flake-utils/python-monorepo/: .gitignore  flake.nix  project.nix  pyproject.toml  test.bats
integration-tests/flake-utils/python-package/: .gitignore  .lefthook.yml  flake.nix  package.nix  project.nix  pyproject.toml  taskfile.yml  test.bats
integration-tests/flake-utils/python-package/.minimal/: README.md
integration-tests/flake-utils/python-package/minimal/: README.md  flake.nix
integration-tests/flake-utils/python-package/src/python_package/: __init__.py  test_foo.py
integration-tests/flake-utils/python-package/tests/: test_nontrivial.py  test_trivial.py
integration-tests/flake-utils/treefmt/: .gitignore  flake.nix  project.nix  test.bats
integration-tests/go-task/: flake.nix  test.bats  test.sh
integration-tests/treefmt/: flake.nix  test.bats
lib/: attrs.nix  bootstrap.nix  config-formats.nix  default.nix  default.tests.nix  injector.nix  injector.tests.nix  nixagoEngines.nix  overlays.nix  project.nix  project.tests.nix  strings.nix  test-conflicts-module-2.nix  test-duplicates-module.nix  tests.nix  types.nix  types.tests.nix
lib/perSystem/: default.nix  nix2xml.xslt
lib/tests/: default.nix  module.nix
minimal/: README.md  flake.nix
modules/config-formats/: common.nix  default.nix  mypy.nix
modules/config-formats/checks/: default.nix
modules/config-formats/go-task/: default.nix  taskfile.cue  taskfile.ext.cue
modules/flake/: injector.nix  risingTideLib.nix
modules/flake/projects/: perSystem.nix  project.nix  project.tests.nix  subprojects.nix  tools.nix
modules/projects/: devShells.nix  hydraJobs.nix  legacyPackages.nix  mkDerivation.nix  mkShell.nix  namespace.nix  nix-eval-jobs.nix  overlay.nix  package.nix  packages.nix  project.nix  tasks.nix
modules/projects/languages/: cpp.nix  default.nix  mavlink.nix  protobuf.nix  python.nix
modules/projects/mkShell/: default.nix  mk-shell-hook.sh
modules/projects/tasks/: default.nix
modules/projects/tools/: alejandra.nix  buf.nix  circleci.nix  clang-tidy.nix  clangd-tidy.nix  clangd.nix  cmake-format.nix  cmake.nix  coverage-py.nix  cue.nix  (+29 more)
test/: taskfile.yml
tests/: default.nix
tests/lib/: attrs.nix  default.nix  injector.nix  overlays.nix  project.nix
tests/projects/: default.nix
(+218 files in other folders)
