[project]
name = "python-package"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Graham Dennis", email = "graham.dennis@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["pytest", "requests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = "python_package:cli"
